--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "TOKEN",
+  "token": "NzUxNjY3NzIzOTQzMTQ5NTk5.X1MbHg.5hbmAYpDT9q4kss53_OGdfpr0S0",
   "prefix": "!",
 
   "clientsettings": {
