--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "NzUxNjY3NzIzOTQzMTQ5NTk5.X1MbHg.5hbmAYpDT9q4kss53_OGdfpr0S0",
+  "token": "ODM5MjY0ODA2Nzc5MDkzMDAz.YJHIQg.ljKNAEelZi0fffDcqUBV-ok5S9M",
   "prefix": "!",
 
   "clientsettings": {
