--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -41,13 +41,13 @@
   },
 
 
-  "ownerIDS": ["442355791412854784"],
+  "ownerIDS": ["640204311262920764"],
 
 
   "status": {
-    "text": "!help | powered by milrato.eu",
+    "text": "!help | verfy soon",
     "type": "STREAMING", "COMMENT:": "TYPES ARE: PLAYING, STREAMING, WATCHING, LISTENING",
-    "url": "https://twitch.tv/milratodiscordbot"
+    "url": "https://twitch.tv/haaama01"
   }
 
 }
