--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -1,6 +1,6 @@
 {
   "token": "ODM5MjY0ODA2Nzc5MDkzMDAz.YJHIQg.ljKNAEelZi0fffDcqUBV-ok5S9M",
-  "prefix": "!",
+  "prefix": "1",
 
   "clientsettings": {
     "nodes": [
