--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -1,6 +1,6 @@
 {
-  "token": "ODM5MjY0ODA2Nzc5MDkzMDAz.YJHIQg.ljKNAEelZi0fffDcqUBV-ok5S9M",
-  "prefix": "1",
+  "token": "Nzg0MzAzNzU2OTI1NDY4NzEz.X8nVyw.RbglHev71TfsW515sWD_3wt63PY",
+  "prefix": "$",
 
   "clientsettings": {
     "nodes": [
