--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "Nzg0MzAzNzU2OTI1NDY4NzEz.X8nVyw.RbglHev71TfsW515sWD_3wt63PY",
+  "token": "ODA3MzUwNTM0OTAxMDcxOTMy.YB2txw.5D1zkFcOOUluL_Zu6f2s9EGc0P0",
   "prefix": "$",
 
   "clientsettings": {
